[project]
name = "expo-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdownify>=1.1.0",
    "mcp[cli]>=1.8.0",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "rapidfuzz>=3.13.0",
    "requests>=2.32.3",
    "typer>=0.15.3",
]
